# plugins

./: .gitignore  .gitmodules  LICENCE  README.md  build.gradle  settings.gradle
build-cache/: build.gradle
cmake/: build.gradle
cmake/src/main/groovy/net/derfruhling/cmake/: AggregateSoftwareComponent.groovy  AttributesInternal.groovy  CMake.groovy  CMakeCommonConfiguration.groovy  CMakeConfiguration.groovy  CMakeConfigurationPlatform.groovy  CMakeConfigurationPlatformDsl.groovy  CMakeConfigurationTarget.groovy  CMakeExtension.groovy  CMakePlatformDefinition.groovy  CMakeTarget.groovy  CMakeTargetsDefinition.groovy  CMakeUnknownPlatformToolchain.groovy  CMakeUnknownToolchain.groovy  CMakeVariantsDefinition.groovy  CMakeWrapperPlugin.groovy  OutputKind.groovy
common/: build.gradle
common/src/main/groovy/net/derfruhling/gradle/: AggregateSoftwareComponent.groovy  ArtifactUsageInformation.groovy  CommonNativePlugin.groovy  NativeArtifact.groovy  NativeArtifactOutputKind.groovy  NativeTarget.groovy
compile-commands/: build.gradle
compile-commands/src/main/groovy/net/derfruhling/gradle/: AggregateJsonTask.groovy  (+3 more)
magic-tests/: build.gradle
spm-info/: build.gradle
test-packages/: gradle.properties  settings.gradle
test-packages/test-cmake/: .gitignore  CMakeLists.txt  build.gradle  test.h
test-packages/test-gtest/: build.gradle
test-packages/test-gtest/src/test/cpp/: main.cpp
test-packages/test-spm-consumer/: build.gradle
test-packages/test-tool/: build.gradle
test-project/: build.gradle  settings.gradle
tools/: build.gradle
(+23 files in other folders)
